--- a/test/nbproject/private/private.properties
+++ b/test/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Vista Soft IT\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector-java-5.1.44-bin.jar=/media/anik/Program/All_Program/Java/mysql-connector-java-5.1.44-bin.jar
+user.properties.file=/home/anik/.netbeans/8.2/build.properties
