--- a/test/nbproject/private/private.properties
+++ b/test/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
-file.reference.mysql-connector-java-5.1.44-bin.jar=/media/anik/Program/All_Program/Java/mysql-connector-java-5.1.44-bin.jar
+file.reference.jasperreports-fonts-6.7.0.jar=/home/anik/NetBeansProjects/Test_project_using_iReport/test/exLib/jasperreports-6.7.0/jasperreports-fonts-6.7.0.jar
+file.reference.jasperreports-javaflow-6.7.0.jar=/home/anik/NetBeansProjects/Test_project_using_iReport/test/exLib/jasperreports-6.7.0/jasperreports-javaflow-6.7.0.jar
 user.properties.file=/home/anik/.netbeans/8.2/build.properties
