--- a/test/nbproject/project.properties
+++ b/test/nbproject/project.properties
@@ -27,11 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mysql-connector-java-5.1.44-bin.jar=..\\..\\mysql-connector-java-5.1.44-bin.jar
+file.reference.jasperreports-6.7.0.jar=exLib/lib/jasperreports-6.7.0.jar
+file.reference.jasperreports-fonts-6.7.0.jar=/media/anik/Program/All_Program/Java/jasperreports-fonts-6.7.0.jar
+file.reference.jasperreports-javaflow-6.7.0.jar=/media/anik/Program/All_Program/Java/jasperreports-javaflow-6.7.0.jar
+file.reference.mysql-connector-java-5.1.44-bin.jar=exLib/lib/mysql-connector-java-5.1.44-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
+    ${file.reference.jasperreports-javaflow-6.7.0.jar}:\
+    ${file.reference.jasperreports-fonts-6.7.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
+    ${file.reference.jasperreports-6.7.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
