--- a/test/nbproject/private/private.properties
+++ b/test/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.mysql-connector-java-5.1.44-bin.jar=/media/anik/Program/All_Program/Java/mysql-connector-java-5.1.44-bin.jar
-user.properties.file=/home/anik/.netbeans/8.2/build.properties
+file.reference.mysql-connector-java-5.1.44-bin.jar=F:\\PRANTA software and program\\Pranta_Office_Work_File\\mysql-connector-java-5.1.44-bin.jar
+user.properties.file=C:\\Users\\Vista Soft IT\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
